# pavarotti

./: .gitignore  README  bootstrap.sh  configure.ac
src/: Makefile.am  collection.c  collection.h  database.c  database.h  main.c  main.h  song.c  song.h  window.c  window.h
tests/: .gitignore  Makefile.am  check_collection  check_collection.c  check_database.c  check_song.c  check_window.c
